--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script async src="https://instawidget.net/js/instawidget.js?u=b58af2c19b764751e021d42c48b0d7575a3f450c4459365bbf94c98895743a78&width=600px"></script>
+    <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
   </body>
 </html>
